--- a/src/scss/carrousel.scss
+++ b/src/scss/carrousel.scss
@@ -6,7 +6,6 @@
     .Content {
       display: flex;
       position: relative;
-      width: 66%;
       transition: transform 0.5s ease;
   
       img {
@@ -77,6 +76,7 @@
     button {
       border: none;
       background-color: white;
+      margin-left: 7%;
     }
   }
   
